--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -1023,11 +1023,11 @@
         "  print(proximal_dict[key])"
       ],
       "metadata": {
-        "id": "jcB9ilCiqJRB",
-        "outputId": "f3168fc6-c31a-44bf-96c1-adff5be52cdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jcB9ilCiqJRB",
+        "outputId": "f3168fc6-c31a-44bf-96c1-adff5be52cdb"
       },
       "execution_count": 231,
       "outputs": [
@@ -1062,11 +1062,11 @@
         "  print(distal_dict[key])"
       ],
       "metadata": {
-        "id": "uEyL5fgoqMce",
-        "outputId": "be164004-e89a-4c4b-bf3b-e0480d76442a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uEyL5fgoqMce",
+        "outputId": "be164004-e89a-4c4b-bf3b-e0480d76442a"
       },
       "execution_count": 230,
       "outputs": [
@@ -1087,6 +1087,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# use 32 and 33 for proximal and distal"
+      ],
+      "metadata": {
+        "id": "lF5EpqrDHQBp"
+      },
+      "execution_count": 264,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "common = []\n",
         "\n",
         "for key in proximal_dict:\n",
@@ -1094,7 +1105,6 @@
         "  for item in distal_dict:\n",
         "    if distal_dict[item]['root'] == root:\n",
         "      common.append(root)\n",
-        "\n",
         "\n",
         "common = list(set(common))\n",
         ""
@@ -1111,11 +1121,11 @@
         "print(f\"roots of the dendrites that cover both the proximal and distal regions:\\n\\t {common}\")"
       ],
       "metadata": {
-        "id": "urU5OsNvBcMX",
-        "outputId": "fcf966c2-ba05-4a61-85b6-9f8274e12951",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "urU5OsNvBcMX",
+        "outputId": "fcf966c2-ba05-4a61-85b6-9f8274e12951"
       },
       "execution_count": 238,
       "outputs": [
@@ -1151,11 +1161,11 @@
         "    commondistaldict.update({key:distal_dict[key]})\n"
       ],
       "metadata": {
-        "id": "dWyQ5ssrCkCP",
-        "outputId": "4963923c-e7a7-4bdb-a9f5-bcee88dc7971",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dWyQ5ssrCkCP",
+        "outputId": "4963923c-e7a7-4bdb-a9f5-bcee88dc7971"
       },
       "execution_count": 260,
       "outputs": [
@@ -1178,11 +1188,11 @@
         "commonproxdict"
       ],
       "metadata": {
-        "id": "s-vx11rmFVmP",
-        "outputId": "44efbbeb-5fbd-40c6-8fe3-b79afbff8647",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s-vx11rmFVmP",
+        "outputId": "44efbbeb-5fbd-40c6-8fe3-b79afbff8647"
       },
       "execution_count": 262,
       "outputs": [
@@ -1213,11 +1223,11 @@
         "commondistaldict"
       ],
       "metadata": {
-        "id": "BxAU12m0FUSh",
-        "outputId": "751ad98f-9507-4774-ba51-6c6510c6c126",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BxAU12m0FUSh",
+        "outputId": "751ad98f-9507-4774-ba51-6c6510c6c126"
       },
       "execution_count": 261,
       "outputs": [
@@ -1241,7 +1251,10 @@
       "cell_type": "code",
       "source": [
         "#SST\n",
-        "# 2 syns / um"
+        "#proximal\n",
+        "# 2 syns / um\n",
+        "#distal\n",
+        "#"
       ],
       "metadata": {
         "id": "4hV6ngcESdvL"
@@ -1252,14 +1265,15 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "40 *.04 * 2 #syns in the 40 um windows"
       ],
       "metadata": {
-        "id": "ZNvvrYIVSy37",
-        "outputId": "89b074c8-ecac-422a-921f-4fcd70534207",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZNvvrYIVSy37",
+        "outputId": "89b074c8-ecac-422a-921f-4fcd70534207"
       },
       "execution_count": 150,
       "outputs": [
@@ -1339,10 +1353,49 @@
     {
       "cell_type": "code",
       "source": [
-        "dend ="
+        "# h.CPGLUIN(x, sec=cell.SEGMENTS['NEURON_section'][syn]))\n",
+        "\n",
+        "# proximal\n",
+        "AMPAS =  [h.CPGLUIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
+        "NMDAS =  [h.NMDAIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
+        "GABAS =  [h.GABAain(0.5, sec=hobject.dend[32])]\n",
+        "\n",
+        "#distal\n",
+        "syn4 = h.CPGLUIN(0.64, sec=hobject.dend[33])"
       ],
       "metadata": {
-        "id": "gVCqXTJKEywG"
+        "id": "JdX79nGhQr2Z"
+      },
+      "execution_count": 265,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ampaNetCONs = [h.NetCon(h.VecStim(),AMPAS[i]) for i in range(len(AMPAS))]\n",
+        "nmdaNetCONs = [h.NetCon(h.VecStim(),NMDAS[i]) for i in range(len(NMDAS))]\n",
+        "gabaNetCONs = [h.NetCon(h.VecStim(),GABAS[i]) for i in range(len(GABAS))]"
+      ],
+      "metadata": {
+        "id": "PICKBp4ZKcjZ"
+      },
+      "execution_count": 267,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Build STIMS"
+      ],
+      "metadata": {
+        "id": "njZ3r7zhK8lu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fk0LGDSLK-_6"
       },
       "execution_count": null,
       "outputs": []
@@ -1350,55 +1403,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# h.CPGLUIN(x, sec=cell.SEGMENTS['NEURON_section'][syn]))\n",
         "\n",
-        "# proximal\n",
-        "syn1 = h.CPGLUIN(0.5, sec=hobject.dend[45])\n",
-        "syn2 = h.CPGLUIN(0.5, sec=hobject.dend[45])\n",
-        "syn3 = h.CPGLUIN(0.5, sec=hobject.dend[45])\n",
-        "\n",
-        "#distal\n",
-        "syn4 = h.CPGLUIN(0.5, sec=hobject.dend[49])"
-      ],
-      "metadata": {
-        "id": "JdX79nGhQr2Z"
-      },
-      "execution_count": 257,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "syn = h.CPGLUIN(0.5,sec=hobject.dend[32](0.5))"
-      ],
-      "metadata": {
-        "id": "n9PDKK_RTk8W",
-        "outputId": "7953d8bd-4e50-4ea2-c130-6f9366b49b96",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 144
-        }
-      },
-      "execution_count": 169,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'hoc.HocObject' object has no attribute 'CPGLUIN'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-169-f98dea70411d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msyn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCPGLUIN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msec\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'hoc.HocObject' object has no attribute 'CPGLUIN'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ampaNETCONS.append(h.NetCon(VECSTIMS[-1], AMPAS[-1]))\n",
-        "ampaNETCON = h.NetCon(h.VecStim(),syn)"
+        "# ampaNETCON = h.NetCon(h.VecStim(),syn)"
       ],
       "metadata": {
         "id": "eBbaaFiSaIAD"
