--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -1361,12 +1361,14 @@
         "GABAS =  [h.GABAain(0.5, sec=hobject.dend[32])]\n",
         "\n",
         "#distal\n",
-        "syn4 = h.CPGLUIN(0.64, sec=hobject.dend[33])"
+        "AMPAS =  [h.CPGLUIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
+        "NMDAS =  [h.NMDAIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
+        "GABAS =  [h.GABAain(0.64, sec=hobject.dend[33])]\n"
       ],
       "metadata": {
         "id": "JdX79nGhQr2Z"
       },
-      "execution_count": 265,
+      "execution_count": 268,
       "outputs": []
     },
     {
