--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -1356,32 +1356,36 @@
         "# h.CPGLUIN(x, sec=cell.SEGMENTS['NEURON_section'][syn]))\n",
         "\n",
         "# proximal\n",
-        "AMPAS =  [h.CPGLUIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
-        "NMDAS =  [h.NMDAIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
-        "GABAS =  [h.GABAain(0.5, sec=hobject.dend[32])]\n",
+        "AMPAS_prox =  [h.CPGLUIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
+        "NMDAS_prox =  [h.NMDAIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
+        "GABAS_prox =  [h.GABAain(0.5, sec=hobject.dend[32])]\n",
         "\n",
         "#distal\n",
-        "AMPAS =  [h.CPGLUIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
-        "NMDAS =  [h.NMDAIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
-        "GABAS =  [h.GABAain(0.64, sec=hobject.dend[33])]\n"
+        "AMPAS_distal =  [h.CPGLUIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
+        "NMDAS_distal =  [h.NMDAIN(0.64, sec=hobject.dend[33]) for i in range(3)]\n",
+        "GABAS_distal =  [h.GABAain(0.64, sec=hobject.dend[33])]\n"
       ],
       "metadata": {
         "id": "JdX79nGhQr2Z"
       },
-      "execution_count": 268,
+      "execution_count": 269,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ampaNetCONs = [h.NetCon(h.VecStim(),AMPAS[i]) for i in range(len(AMPAS))]\n",
-        "nmdaNetCONs = [h.NetCon(h.VecStim(),NMDAS[i]) for i in range(len(NMDAS))]\n",
-        "gabaNetCONs = [h.NetCon(h.VecStim(),GABAS[i]) for i in range(len(GABAS))]"
+        "ampaNetCONs_prox = [h.NetCon(h.VecStim(),AMPAS_prox[i]) for i in range(len(AMPAS_prox))]\n",
+        "nmdaNetCONs_prox = [h.NetCon(h.VecStim(),NMDAS_prox[i]) for i in range(len(NMDAS_prox))]\n",
+        "gabaNetCONs_prox = [h.NetCon(h.VecStim(),GABAS_prox[i]) for i in range(len(GABAS_prox))]\n",
+        "\n",
+        "ampaNetCONs_distal = [h.NetCon(h.VecStim(),AMPAS_distal[i]) for i in range(len(AMPAS_distal))]\n",
+        "nmdaNetCONs_distal = [h.NetCon(h.VecStim(),NMDAS_distal[i]) for i in range(len(NMDAS_distal))]\n",
+        "gabaNetCONs_distal = [h.NetCon(h.VecStim(),GABAS_distal[i]) for i in range(len(GABAS_distal))]"
       ],
       "metadata": {
         "id": "PICKBp4ZKcjZ"
       },
-      "execution_count": 267,
+      "execution_count": 270,
       "outputs": []
     },
     {
