--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -1354,7 +1354,7 @@
       "cell_type": "code",
       "source": [
         "# h.CPGLUIN(x, sec=cell.SEGMENTS['NEURON_section'][syn]))\n",
-        "\n",
+        "hobject = build_cell(soma_diam_multiplier)\n",
         "# proximal\n",
         "AMPAS_prox =  [h.CPGLUIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
         "NMDAS_prox =  [h.NMDAIN(0.5, sec=hobject.dend[32]) for i in range(3)]\n",
@@ -1368,7 +1368,7 @@
       "metadata": {
         "id": "JdX79nGhQr2Z"
       },
-      "execution_count": 269,
+      "execution_count": 273,
       "outputs": []
     },
     {
@@ -1385,7 +1385,30 @@
       "metadata": {
         "id": "PICKBp4ZKcjZ"
       },
-      "execution_count": 270,
+      "execution_count": 274,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for sec in hobject.allsec():\n",
+        "#     print(f\"Section: {sec.name()}\")\n",
+        "#     psec = sec.psection()\n",
+        "#     [print(name) for name in psec['point_processes']]"
+      ],
+      "metadata": {
+        "id": "5N5KKgYaQoJa"
+      },
+      "execution_count": 276,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gB9F1x1CQoaT"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
